--- a/components/Admin.css
+++ b/components/Admin.css
@@ -386,4 +386,36 @@ input:focus {
 .main-layout{
   display:flex;
   flex-direction:column;
+  height: 100%;
+}
+
+.video-card{
+  display: flex;
+  flex-direction: column;
+}
+
+.upload-btn{
+  display: flex;
+  width: 100%;
+  height: 200px;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
